# datafusion-ballista

./: Cargo.toml  docker-compose.yml  executor.Dockerfile  scheduler.Dockerfile
.github/workflows/: build.yml  codeql.yml  comment_bot.yml  dependencies.yml  dev.yml  docker.yml  docs.yaml  python_build.yml  python_test.yaml  rust.yml  tpch.yml  web-tui.yml
ballista-cli/: Cargo.toml
ballista/client/: Cargo.toml
ballista/core/: Cargo.toml
ballista/core/src/: client.rs  config.rs  extension.rs
ballista/core/src/execution_plans/: shuffle_reader.rs
ballista/core/src/serde/: mod.rs
ballista/executor/: Cargo.toml
ballista/executor/src/: client_pool.rs
ballista/rust/client/: Cargo.toml
ballista/rust/core/: Cargo.toml
ballista/rust/core/src/: utils.rs
ballista/rust/executor/: Cargo.toml
ballista/rust/scheduler/: Cargo.toml
ballista/scheduler/: Cargo.toml
ballista/scheduler/src/: planner.rs
ballista/scheduler/ui/: package.json
ballista/tests/: Cargo.toml
ballista/tests/src/: lib.rs  tpch.rs
benchmarks/: Cargo.toml  README.md  tpch-gen.sh
benchmarks/benches/: sort_shuffle.rs
dev/: build-ballista-docker.sh  build-set-env.sh
dev/docker/: ballista-benchmarks.Dockerfile  ballista-executor.Dockerfile  ballista-scheduler.Dockerfile  ballista.Dockerfile  ballista.dockerfile
examples/: Cargo.toml
python/: Cargo.toml  README.md  pyproject.toml
python/ballista/tests/: test_aggregation.py  test_imports.py  test_udaf.py
python/pyballista/: __init__.py
python/pyballista/tests/: test_context.py
python/src/: lib.rs
(+30 files in other folders)
